ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chp-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
spec:
  rules:
  - host: test.toolsforsellers.com
    http:
      paths:
        - backend:
            serviceName: ajax-site
            servicePort: 80
  tls:
    - hosts:
      - test.toolsforsellers.com
      secretName: letsencrypt-tenancy-prod


---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "letsencrypt-prod"
  namespace: kube-system
spec:
  rules:
  - host: test.toolsforsellers.com
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - test.toolsforsellers.com
    secretName: letsencrypt-tenancy-prod
